scss/components/modal.scss
#modalbg {
     // modal background darkener
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    position: absolute;
    z-index: $zindex_highest - 1;

    background-color: var(--color-05);
    // opacity: 0.45;

    animation:animModalBgFadeIn 0.15s normal forwards ease-out;
    animation-iteration-count: 1
}

@keyframes animModalBgFadeIn
{
	0%{		opacity: 0;	}
    100%{	opacity: 0.45;	}
}


.nopadding {
    padding: 0px !important;

    .top {
        padding: 20px;
        background-color: var(--color-01);

        h3 {
            margin-top: 0px;
        }

        a {
            color: $highlight-color;
            text-decoration: underline;
        }
    }

    .bottom {
        padding: 20px;
    }
}

.modalcontainer,#modalcontainer {
    border-radius: $border-radius-popups;
    position: absolute;
    display: block;
    left: 50%;
    transform: translate(-50%,0.0);
    top: 10%;
    width: auto;
    height: auto;
    min-width: 720px;
    max-height: 75%;
    overflow: auto;
    z-index: $zindex_highest;
    background-color: $background-color-dark;
    min-height: 100px;
    -webkit-box-shadow: -1px 1px 34px -6px rgba(0, 0, 0, 0.68);
    -moz-box-shadow: -1px 1px 34px -6px rgba(0, 0, 0, 0.68);
    box-shadow: -1px 1px 34px -6px rgba(0, 0, 0, 0.68);

    padding-bottom: 15px;

    .modalclose {
        right: 15px;
        margin-top: 5px;
        background-color: transparent;
        position: absolute;
        cursor:pointer;
        display: none;
        .fa {
            font-size: 23px;
        }
    }

    .modallist {
        margin-top: 30px;
        ul {
            padding-left: 20px;
            li {
                margin-bottom: 0.5em;
            }
        }
    }

    &.transparent {
        background-color: transparent !important;
        -webkit-box-shadow: none;
        -moz-box-shadow: none;
        box-shadow: none;
    }
}

#modalcontent {
    padding: 15px;
    font-size: var(--font-size-bigger);
    user-select: text;
    -webkit-user-select: text; /* Chrome all / Safari all */
    -moz-user-select: text; /* Firefox all */
    -ms-user-select: text; /* IE 10+ */

    pre {
        max-width: 700px;
        overflow: auto;
    }
}


#modalheader {
    // position: absolute;
    // background-color: $color-background-input;
    color: $highlight-color;
    text-align: center;
    font-size: 17px;
    padding: 5px;
    text-transform: uppercase;
}

.shaderErrorCode,
.code {
    font-family: SourceCodePro, monospace;
    white-space: pre;
    background-color: var(--color-03);
    padding: 10px;
    max-height: 600px;
    overflow: auto;
    user-select: text;
    -webkit-user-select: text; /* Chrome all / Safari all */
    -moz-user-select: text; /* Firefox all */
    -ms-user-select: text; /* IE 10+ */
    max-width: 800px;

    .error {
        background-color: #400;
        width: 100%;
    }
}

.shaderErrorCodeMsg {
    font-family: SourceCodePro, monospace;
    white-space: pre;
    background-color: var(--color-03);
    padding: 10px;
    user-select: text;
    -webkit-user-select: text; /* Chrome all / Safari all */
    -moz-user-select: text; /* Firefox all */
    -ms-user-select: text; /* IE 10+ */
    max-width: 800px;
    overflow: auto;

    .shaderErrorCode {
        padding: 0;
        overflow: visible;
    }
}

.modalScrollContent {
    user-select: text;
    clear: both;
    background-color: $background-color-brighter;
    max-height: 500px;
    overflow-y: scroll;
    padding: 20px;
}

